tests/ui/serde/serde.stderr
error: Found unused `#[serde(...)]`
 --> tests/ui/serde/serde.rs:8:1
  |
8 | #[serde(crate = "serde_")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^
